--- a/ecommerceSpring/src/main/resources/application.properties
+++ b/ecommerceSpring/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=ecommerceSpring
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommercespring
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password123!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
